--- a/gradle.properties
+++ b/gradle.properties
@@ -57,3 +57,6 @@ mod_group_id=com.myname.triermod
 mod_authors=DM_XHQ
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Hello World ! ! !.\nThanks for downloading, I hope you enjoy it!
+
+
+jade_id=4914105
